--- a/docs/01-Java/02-Spring/02-IoC Inject 1.mdx
+++ b/docs/01-Java/02-Spring/02-IoC Inject 1.mdx
@@ -365,4 +365,7 @@ public class PropConfigTest {
 > 
 > 1. 书籍名称：Spring揭秘 作者：王福强
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
