--- a/docs/01-Java/02-Spring/03-IoC Inject2.mdx
+++ b/docs/01-Java/02-Spring/03-IoC Inject2.mdx
@@ -383,4 +383,7 @@ public class Test4FXNewsProviderMethodReplacer {
 > 
 > 1. 书籍名称：Spring揭秘 作者：王福强
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
